@@ -2,6 +2,7 @@ from ucommon 5.0.5 to 5.0.6
 - generic object save/auto-restore.
 - separation of shell::error() from shell::errexit(0,...)
 - separation of runtime and non-runtime libs
+- disable posix_fadvise if header definitions missing (debian kfreebsd bug)
 
 from ucommon 5.0.4 to 5.0.5
 - fix for commoncpp emulation when no direct parent commoncpp thread.
